--- a/app/assets/stylesheets/type_station/admin_bar.css.scss
+++ b/app/assets/stylesheets/type_station/admin_bar.css.scss
@@ -26,7 +26,7 @@ $admin-bar-icon-size: 26.5pt;
   position: fixed;
   z-index: 1000;
   background: #fff;
-  bottom: -100px;
+  bottom: 0px;
   left: 0px;
   right: 0px;
   padding: 0px;
@@ -35,8 +35,7 @@ $admin-bar-icon-size: 26.5pt;
   transition: bottom .5s;
   box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
   border-top: 1px solid #ccc;
-  &.insert-open { bottom: 0px; }
-  ul { 
+  ul {
     display: table;
     width: 100%;
     height: $admin-bar-height;
@@ -61,13 +60,13 @@ $admin-bar-icon-size: 26.5pt;
 
       &.ts-title {
         width: 78%;
-        input {
+        p {
           display: block;
           width: 100%;
           border: 0px;
           outline: none;
-          padding: 7px 15px;
-          font-size: 1.4em;
+          padding: 0px 15px;
+          font-size: 1em;
         }
       }
 
@@ -93,14 +92,14 @@ $admin-bar-icon-size: 26.5pt;
       }
     }
 
-  } 
+  }
 }
 
 #insert-content {
   background: rgba(27, 33, 36, 0.67);
   height: 100px;
-  ul li.insert-new { 
-    cursor: pointer; 
+  ul li.insert-new {
+    cursor: pointer;
     margin: 5px 0 0 5px;
     width: 1.4em;
     display: inline-block;
@@ -123,16 +122,11 @@ $admin-bar-icon-size: 26.5pt;
       color: #fff;
       text-align: left;
     }
-    &:hover { 
+    &:hover {
       .insert-icon { background-color: #428bca; color: #fff; }
     }
   }
 }
-
-#ts-admin-bar-settings {
-  display: none;
-}
-
 
 #ts-admin-bar-options {
   font-family: Tahoma, Geneva, sans-serif;
