--- a/app/assets/stylesheets/type_station/base.css.scss
+++ b/app/assets/stylesheets/type_station/base.css.scss
@@ -1,4 +1,4 @@
-$primary-color: #fff; 
+$primary-color: #fff;
 $primary-border-color: #ccc;
 
 $secondary-color: #428bca;
@@ -45,14 +45,15 @@ $secondary-border-color: #357ebd;
   z-index: 100000;
 }
 
-.ts-editable-image, .ts-editable-file, .ts-edit-page, .ts-edit-link { position: relative;}
+.ts-block, .ts-block-text { position: relative; }
+.ts-block:focus, .ts-block-text:focus { outline: none;}
 
 .ts-editable-button {
   position: absolute;
   bottom:0px;
   left: 0px;
   z-index: 10;
-  display: none;
+  display: block;
   font-size: 17pt;
   box-sizing: content-box;
   line-height: 1;
@@ -66,59 +67,26 @@ $secondary-border-color: #357ebd;
   &:hover { background: rgba(27,33,36,0.87); }
 }
 
-.ts-edit-page-button {
-top: 0px;
-right: 40px;
-bottom: auto;
-left: auto;
-}
-
-.ts-delete-page-button {
-top: 0px;
-right: 0px;
-bottom: auto;
-left: auto;
-}
-
-.ts-move-up-button, .ts-move-down-button-invert {
-top: 0px;
-right: 120px;
-bottom: auto;
-left: auto;
-}
-
-.ts-move-down-button, .ts-move-up-button-invert {
-top: 0px;
-right: 80px;
-bottom: auto;
-left: auto;
-}
-
-.ts-editable-link-button {
-  bottom: auto;
-  top:0px;
-}
-
-body.ts-edit-mode {
-  .ts-editable-html, .ts-editable-image, .ts-editable-file, .ts-editable-text, .ts-edit-page, .ts-edit-link  {
+body.ts-enable {
+  .ts-block  {
     border: none;
     outline: none;
     -webkit-transition: border 0.5s;
     transition: border 0.5s;
-    &:hover { 
-      outline: 2px solid #428bca; 
+    &:hover {
+      outline: 2px solid #428bca;
       .ts-editable-button { display: block; }
     }
   }
 
-  .ts-editable-text {
-    &:hover { 
-      outline: 2px dashed #428bca; 
+  .ts-block-text {
+    &:hover {
+      outline: 2px dashed #428bca;
       .ts-editable-button { display: block; }
     }
   }
 
-  
+
 }
 
 .vex-custom-field-wrapper {
@@ -165,7 +133,7 @@ body.ts-edit-mode {
   font-weight: inherit;
   font-size: inherit;
   min-height: 2.5em;
-  margin: 0 0 0.25em; 
+  margin: 0 0 0.25em;
   box-shadow: none;
 
   .search-choice {
@@ -183,7 +151,7 @@ body.ts-edit-mode {
   border-top: 1px solid #999;
 
   .result-selected {
-    display: none !important; 
+    display: none !important;
   }
 
   .highlighted {
@@ -220,18 +188,18 @@ body.ts-edit-mode {
   ul.ts-model-fields {
     margin: 4px 15px;
     padding: 0;
-    &:after { 
+    &:after {
       content: '';
       display: table;
       clear: both;
     }
-    li { 
+    li {
       &.ts-inline-field { float: left; }
-      label { 
+      label {
         display: inline-block;
         padding-right: 10px;
       }
-      input { 
+      input {
         height: 2.5em;
         font-size: 13.5pt;
         padding: 5px;
@@ -239,7 +207,7 @@ body.ts-edit-mode {
         color: #444;
         outline: none;
       }
-      button { 
+      button {
         width: 1.8em;
         height: 1.7em;
         font-size: 1.5em;
@@ -288,9 +256,9 @@ body.ts-edit-mode {
   }
   &:hover { background-color: $secondary-border-color; }
 }
-.ts-save-url { 
+.ts-save-url {
   padding: 0.75em 2em;
-  margin: 8px 0px 0px; 
+  margin: 8px 0px 0px;
   letter-spacing: 0.1em;
   text-transform: uppercase;
   font-family: inherit;
