fixed issue multiple_select forms

--- a/spec/dummy/app/views/pages/index_other.html.erb
+++ b/spec/dummy/app/views/pages/index_other.html.erb
@@ -18,6 +18,7 @@
       <%= sp.move :down, content_tag: :button do %>
         move down
       <%- end %>
+      <%= page.get :tags %>
       </li>
 
     <%- end %>
