--- a/app/assets/stylesheets/type_station/base.css.scss
+++ b/app/assets/stylesheets/type_station/base.css.scss
@@ -75,6 +75,7 @@ body.ts-enable {
     transition: border 0.5s;
     &:hover {
       outline: 2px solid #428bca;
+      z-index: 3;
       .ts-editable-button { display: block; }
     }
   }
