Fix a number medium-editor related issues

--- a/app/assets/stylesheets/type_station/admin_bar.css.scss
+++ b/app/assets/stylesheets/type_station/admin_bar.css.scss
@@ -67,6 +67,7 @@ $admin-bar-icon-size: 26.5pt;
           outline: none;
           padding: 0px 15px;
           font-size: 1em;
+          min-height: auto;
         }
       }
 
